--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: Hydra Template
+title: Flowersales
 url: "https://proud-alligator.cloudvent.net"
 baseurl:
 google_analytics_key:
