--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
-- name: Blog
+- name: Блог
   link: /blog/
   new_window: false
   highlight: false
-- name: About
+- name: О нас
   link: /about/
   new_window: false
   highlight: false
-- name: Contact
+- name: Контакты
   link: /contact/
   new_window: false
   highlight: false
