--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 # Site
 
 title: Flowersales
-url:
+url: https://flowersales.co
+enforce_ssl: flowersales.co
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
