--- a/_config.yml
+++ b/_config.yml
@@ -4,24 +4,40 @@
 title: Flowersales
 url: https://flowersales.co
 enforce_ssl: flowersales.co
+baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description:
+description: App marketing template for Jekyll.
 author:
   name:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name:
+  name: Frisco Template
   links:
-    - https://github.com/CloudCannon/hydra-jekyll-template
+    - https://github.com/CloudCannon/frisco-jekyll-template
 
 # -----
 # Build
+
+permalink: pretty
+
+gems:
+  - jekyll-sitemap
+  - jekyll-seo-tag
+  - jekyll-feed
+  - jekyll-paginate
+  - jekyll-archives
+
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - README.md
+  - LICENCE
 
 collections:
   staff_members:
@@ -29,47 +45,26 @@ collections:
 
 paginate: 10
 paginate_path: "/blog/:num/"
-permalink: pretty
+
+jekyll-archives:
+  enabled: ['categories']
 
 defaults:
   -
     scope:
       path: ""
+    values:
+      layout: "default"
+  -
+    scope:
       type: "posts"
     values:
       layout: "post"
   -
     scope:
-      path: ""
+      path: "contact-success.html"
     values:
       layout: "page"
-  -
-    scope:
-      path: "index.html"
-    values:
-      layout: "default"
-  -
-    scope:
-      path: "contact.html"
-    values:
-      full_width: true
-
-jekyll-archives:
-  enabled:
-    - categories
-
-gems:
-  - jekyll-archives
-  - jekyll-sitemap
-  - jekyll-seo-tag
-  - jekyll-feed
-  - jekyll-paginate
-
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - README.md
-  - LICENCE
 
 # -----------
 # CloudCannon
@@ -83,14 +78,9 @@ social_icons:
   - Tumblr
   - Twitter
   - YouTube
+  - Email
   - RSS
 
 _comments:
-  map: Update the map location and display settings.
-  latitude: Coordinates for the center marker on the map.
-  longitude: Coordinates for the center marker on the map.
-  zoom: The zoom level for the map.
-  pricing_table: Update the information in the pricing tables.
-  highlight: Emphasis the text
-  color: The background colour used in the plan name and call to action.
-  new_window: Open link in new window
+  description: Text shown when sharing on social media
+  blurb: Short bio or description of this person
