--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 # Site
 
 title: Flowersales
-url: https://flowersales.co
-enforce_ssl: flowersales.co
+url: "https://flowersales.co"
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
