--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
-- name: Blog
+- name: Блог
   link: /blog/
-- name: About
+- name: О нас
   link: /about/
-- name: Contact
+- name: Контакты
   link: /contact/
