--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,4 +1,4 @@
 title: Flowersales
 description: С нами - поиск букетов становится только удовольствием!
 contact_email_address: info@flowersales.co
-contact_phone_number: (999) 527 0759
+contact_phone_number: +7 (999) 527 0759
